--- a/scrum-project/app/views/layouts/_navbar.html.erb
+++ b/scrum-project/app/views/layouts/_navbar.html.erb
@@ -12,6 +12,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="<%= new_product_path %>">Vender</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="<%= bought_products_path %>">Productos Comprados</a>
+      </li>
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item dropdown">
